Features/customerPortal/force-app/main/default/objects/Customer_Portal_Session__c/Customer_Portal_Session__c.object-meta.xml
<CustomObject>
    <description>Secure token session for FTM Customer Portal access.</description>
    <label>Customer Portal Session</label>
    <nameField>
        <displayFormat>CPS-{000000}</displayFormat>
        <label>Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Portal Sessions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>