Features/customerPortal/force-app/main/default/objects/Customer_Portal_Session__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Portal Sessions</relationshipLabel>
    <relationshipName>Customer_Portal_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>