Features/customerPortal/force-app/main/default/objects/Customer_Portal_Session__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Portal Sessions</relationshipLabel>
    <relationshipName>Customer_Portal_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>