Features/customerPortal/force-app/main/default/objects/Customer_Portal_Session__c/fields/Last_IP__c.field-meta.xml
<CustomField>
    <fullName>Last_IP__c</fullName>
    <label>Last IP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>