Features/customerPortal/force-app/main/default/objects/Customer_Portal_Session__c/fields/Last_Opened__c.field-meta.xml
<CustomField>
    <fullName>Last_Opened__c</fullName>
    <label>Last Opened</label>
    <type>DateTime</type>
</CustomField>