Features/customerPortal/force-app/main/default/objects/Customer_Portal_Session__c/fields/Last_User_Agent__c.field-meta.xml
<CustomField>
    <fullName>Last_User_Agent__c</fullName>
    <label>Last User Agent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>