Features/customerPortal/force-app/main/default/objects/Customer_Portal_Session__c/fields/Portal_Link__c.field-meta.xml
<CustomField>
    <fullName>Portal_Link__c</fullName>
    <label>Portal Link</label>
    <type>Url</type>
</CustomField>